--- a/_layouts/teaching_page.html
+++ b/_layouts/teaching_page.html
@@ -5,8 +5,11 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include _head.html %}
+ <script type="text/javascript"
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+ </script>
 </head>
-
+     
 <body class="teaching_page">
 
 {% include _browser-upgrade.html %}
